@@ -7,6 +7,7 @@ documents those changes that are of interest to users and administrators.
     commands.
  -- Fix issue in gres code to handle a gres cnt of 0.
  -- Don't purge jobs if backfill is running.
+ -- Verify job is pending add/removing accrual time.
 
 * Changes in Slurm 18.08.7
 ==========================
